--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <h2>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, alias!
     </h2>
+    <div>
+        test
+    </div>
 </body>
 </html>
