--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <div>
         <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, enim.</h1>
     </div>
+    <div>
+        main
+    </div>
 </body>
 </html>
